# ai-legacy

./: .env.example  .gitignore  README.md  pyproject.toml
data/personality/: behavior.md  biography.md  humor.md  opinions.md  phrases.md  principles.md  relationships.md
docs/: self-interview-guide.md
docs/superpowers/plans/: 2026-05-12-data-and-mvp-chatbot.md  2026-05-12-followup-quality-and-rate-limits.md
docs/superpowers/specs/: 2026-05-12-ai-legacy-copy-design.md
scripts/: extract_voices.py  parse_telegram_export.py
src/ai_legacy/: bot.py  config.py  db.py  few_shot.py  handler.py  llm.py  personality.py  prompt_builder.py  rag.py
src/ai_legacy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_db.py  test_extract_voices.py  test_few_shot.py  test_handler.py  test_llm.py  test_parse_telegram_export.py  test_personality.py  test_prompt_builder.py  test_rag.py
tests/fixtures/: telegram_export_sample.json
